# VC_lab_02_aa25-26

./: CMakeLists.txt  README.md
src/: image.h  utils.cpp
src/test/: test0.cpp  test0_legacy.hpp  test1.cpp  test1_legacy.hpp
